# autoLB

./: .env  .gitignore  AGENTS.md  CODEX_cheatsheet.md  README.md
.codex/: config.toml
.github/: copilot-instructions.md  sprint-context.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_0001_initial_schema.py  20260409_0001_initial_domain_models.py  a3f8f2356e1c_v2_8_v2_10_domain_model_update.py
backend/app/: __init__.py  celery_app.py  main.py  tasks.py  worker.py
backend/app/api/v1/: __init__.py  auth.py  data_service.py  data_service_auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/domain/: __init__.py  base.py  comment.py  enums.py  mixins.py  models.py  operator.py  project_contact.py  unit_membership.py  unit_policy.py
backend/autologbook_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: test_data_service_auth_integration.py  test_data_service_integration.py
backend/tests/unit/: test_app.py  test_auth_api.py  test_config.py  test_data_service_api.py  test_data_service_auth_api.py  test_domain_models.py  test_main.py  test_security.py  test_worker.py
data-service/: Dockerfile  README.md  config.toml.example  docker-compose.yml  go.mod  go.sum
data-service/cmd/agent/: main.go  main_live_test.go  main_test.go  runtime.go
data-service/internal/client/: client.go  client_test.go
data-service/internal/config/: config.go  config_test.go
data-service/postman/: autologbook-data-service.postman_collection.json  autologbook-data-service.postman_environment.json
docs/architecture/: legacy-analysis.md  migration-plan.md  migration-risks.md  target-architecture.md
docs/spec/: extracted.md  feature-mapping.md  normalized-requirements.md
docs/srs/: autologbook_srs.docx  autologbook_srs_v2.10.md  autologbook_srs_v2.7.docx  autologbook_srs_v2.7.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css
infra/: docker-compose.yml
legacy/: autoprotocol.py  elog_interface.py  microscope_picture.py
(+5 files in other folders)
