[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autologbook-backend"
version = "0.1.0"
dependencies = [
  "sqlalchemy>=2.0",
  "celery[redis]>=5.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]