[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autologbook-backend"
version = "0.1.0"
description = "Autologbook backend service"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "alembic",
  "pydantic>=2,<3",
  "pydantic-settings",
  "celery",
  "redis",
  "Pillow",
  "numpy",
  "piexif",
  "pyvips",
  "boto3",
  "python-jose[cryptography]",
  "bcrypt",
  "Jinja2",
  "asyncpg",
  "defusedxml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "moto[s3]",
  "aiosqlite",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
